RESOLVED FIXED58555
Fix Web Audio build on Linux Debug and with stub FFTFrame
https://bugs.webkit.org/show_bug.cgi?id=58555
Summary Fix Web Audio build on Linux Debug and with stub FFTFrame
Kenneth Russell
Reported 2011-04-14 11:10:06 PDT
The Web Audio build is currently broken in debug Linux builds of Chromium due to missing #includes of stdio.h, and in general when using the stub FFTFrame class due to a missing definition of FFTFrame::initialize().
Attachments
Patch (2.55 KB, patch)
2011-04-14 11:11 PDT, Kenneth Russell
dglazkov: review+
kbr: commit-queue-
Kenneth Russell
Comment 1 2011-04-14 11:11:53 PDT
Dimitri Glazkov (Google)
Comment 2 2011-04-14 11:13:09 PDT
Comment on attachment 89610 [details] Patch ok.
Kenneth Russell
Comment 3 2011-04-14 11:20:00 PDT
Note You need to log in before you can comment on or make changes to this bug.