2011-04-14  Kenneth Russell  <kbr@google.com>

Reviewed by Dimitri Glazkov.

        Fix Web Audio build on Linux Debug and with stub FFTFrame
        https://bugs.webkit.org/show_bug.cgi?id=58555

        Built Chromium/Linux in Debug mode to test.

        * platform/audio/FFTFrame.cpp:
        * platform/audio/FFTFrameStub.cpp:
        (WebCore::FFTFrame::initialize):
        * webaudio/AudioContext.cpp:
        * webaudio/DefaultAudioDestinationNode.cpp:


Canonical link: https://commits.webkit.org/73631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83875 268f45cc-cd09-0410-ab3c-d52691b4dbfc